--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -38,6 +38,7 @@
 .i-button {
 	cursor: pointer;
 	font-size: 13px;
+	white-space: nowrap;
 }
 
 .i-button img {
@@ -108,10 +109,9 @@
 }
 
 .i-errorindicator {
-	width: 10px;
+	width: 12px;
 	height: 16px;
-	padding-right:13px;
-	display: inline;
+	float: left;
 	background: transparent url(icons/16/error.png) no-repeat top right;
 }
 
@@ -123,7 +123,6 @@
 *+html .i-errorindicator {
 	margin-left:-3px;
 }
-	
 .i-caption .i-icon {
 	padding-right: 2px;
 	vertical-align: middle;
@@ -926,7 +925,7 @@ input.i-modified,
 }
 
 .i-orderedlayout-vspacing {
-	margin-top: 8px;
+	padding-top: 8px;
 }
 .i-orderedlayout-hspacing {
 	padding-left: 8px;
@@ -1219,16 +1218,13 @@ input.i-modified,
 
 .i-filterselect {
 	height: 23px;
-	background: transparent url(select/img/bg-left-filter.png) no-repeat;
-	margin-right: 1px;
 	white-space: nowrap;
 	text-align: left /* Force default alignment */
 }
 
 .i-filterselect-input {
-	width: 99%;
+	background: transparent url(select/img/bg-left-filter.png) no-repeat;
 	border: none;
-	background: transparent;
 	height: 20px;
 	margin: 0;
 	padding: 3px 0 0 4px;
@@ -1241,7 +1237,7 @@ input.i-modified,
 
 .i-filterselect-button {
 	float: right;
-	margin: -23px -1px 0 0;
+	margin-left: -23px;
 	width: 25px;
 	height: 23px;
 	cursor: pointer;
