--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -632,49 +632,6 @@ input.i-modified,
 	filter: alpha(opacity=30);
 }
 
-.i-expandlayout-lo-table {
-	margin:0;
-	padding:0;
-	height:100%;
-	border:0;
-	border-spacing: 0;
-}
-.i-expandlayout-lo-td {
-	margin:0;
-	padding:0;
-	height:100%;
-	border:0;
-}
-
-.i-expandlayout-valign {
-	margin:0;
-	padding:0;
-	border:0;
-	border-collapse:collapse;
-	border-spacing:0;
-	height:100%;
-	width:100%;
-}
-
-.i-expandlayout-margin-top {
-	padding-top: 15px;
-}
-.i-expandlayout-margin-right {
-	padding-right: 18px;
-}
-.i-expandlayout-margin-bottom {
-	padding-bottom: 15px;
-}
-.i-expandlayout-margin-left {
-	padding-left: 18px;
-}
-
-.i-expandlayout-vspacing {
-	margin-top: 8px;
-}
-.i-expandlayout-hspacing {
-	margin-left: 8px;
-}
 .i-formlayout-cell .i-errorindicator {
 	width: 10px;
 	height: 16px;
@@ -1224,9 +1181,10 @@ input.i-modified,
 
 .i-filterselect-input {
 	background: transparent url(select/img/bg-left-filter.png) no-repeat;
+	float: left;
 	border: none;
 	height: 20px;
-	margin: 0;
+	margin: 0px;
 	padding: 3px 0 0 4px;
 	font-size: 13px;
 }
@@ -1237,12 +1195,10 @@ input.i-modified,
 
 .i-filterselect-button {
 	float: right;
-	margin-left: -23px;
 	width: 25px;
 	height: 23px;
 	cursor: pointer;
 	background: transparent url(select/img/bg-right-filter.png);
-	position: relative;
 }
 .i-filterselect-button:hover {
 	background-position: bottom left;
@@ -1370,20 +1326,14 @@ input.i-modified,
 * html .i-filterselect {
 
 }
-* html .i-filterselect-input {
-	margin-top: -1px;
-}
 
 *+html .i-filterselect-input {
 	margin-top: -1px;
 }
-* html .i-filterselect-button {
-	position: static;
-	margin-top: -24px;
-}
+
+
 *+html .i-filterselect-button {
-	position: static;
-	margin-top: -24px;
+		margin-top: -1px;
 }
 
 
