Tabsheet deco fix for IE7
svn changeset:5719 branch:trunk

--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -2057,6 +2057,7 @@ input.i-modified,
 	background: #babfc0;
 	overflow: hidden;
 	margin: 0;
+	width: 100%;
 }
 .i-textfield {
 	background: #fff url(textfield/img/bg.png) repeat-x;
