--- a/WebContent/ITMILL/themes/sampler/sampler/styles.css
+++ b/WebContent/ITMILL/themes/sampler/sampler/styles.css
@@ -36,8 +36,7 @@
 .i-customcomponent-ModeSwitch .i-button {
 	height: 28px;
 	border: none;
-	border-right: 1px solid #736a60;
-	margin: 0px;
+	font-size: 6px;
 }
 .i-customcomponent-ModeSwitch .i-button-first-on {
 	background: transparent url(left-on.gif) no-repeat;
