--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -1087,12 +1087,14 @@ input.i-modified,
 }
 .i-progressindicator {
 	background: #dfe2e4 url(progressindicator/img/base.gif);
-	height: 9px;
-	border: 1px solid #b6bbbc;
 	overflow: hidden; /* for IE6 */
 	width: 150px;
 }
-
+.i-progressindicator-wrapper {
+	border: 1px solid #b6bbbc;
+	overflow: hidden; /* for IE6 */
+	height: 9px;
+}
 .i-progressindicator-disabled {
 	background: #dfe2e4 url(progressindicator/img/disabled.gif);
 	height: 9px;
@@ -1100,7 +1102,7 @@ input.i-modified,
 	overflow: hidden; /* for IE6 */
 }
 
-.i-progressindicator div {
+.i-progressindicator-indicator {
 	background: #f7f9f9 url(progressindicator/img/progress.png);
 	height: 9px;
 	overflow: hidden; /* for IE6 */
