added back label margin overflow hack
svn changeset:5781 branch:trunk

--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -368,8 +368,8 @@ input.i-modified,
  * Label has tiny paddings to include contents margins.
  */
 .i-label {
-/*	padding-top:1px;
-	padding-bottom: 1px;*/
+	padding-top:1px;
+	padding-bottom: 1px;
 }
 
 /* Loading indicator states
