Link now behaves more like regular html links, fixes #2190
svn changeset:5806 branch:trunk

--- a/WebContent/ITMILL/themes/default/common/common.css
+++ b/WebContent/ITMILL/themes/default/common/common.css
@@ -219,10 +219,10 @@ input.i-modified,
  * Link component styles 
  * (useless to move into a separate file)
  */
-
-.i-link span {
-	text-decoration: underline;
-	cursor:pointer;
+.i-link a {
+	font-size: 13px;
+	line-height: 18px;
+	color: #464f52;
 }
 
 /**
