fixes #2184, checkboxes were displayed inline in IE
svn changeset:5820 branch:trunk

--- a/WebContent/ITMILL/themes/default/select/select.css
+++ b/WebContent/ITMILL/themes/default/select/select.css
@@ -12,6 +12,8 @@
 .i-select-optiongroup .i-select-option {
 	display: block;
 	white-space: nowrap;
+	/* really mean block for IE */
+	zoom: 1;
 }
 
 .i-select-select {
