--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -1134,6 +1134,8 @@ input.i-modified,
 .i-select-optiongroup .i-select-option {
 	display: block;
 	white-space: nowrap;
+	/* really mean block for IE */
+	zoom: 1;
 }
 
 .i-select-select {
