Fix for #2195 - TabSheet problems in Safari
svn changeset:5838 branch:trunk

--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -358,10 +358,10 @@ input.i-modified,
  * Link component styles 
  * (useless to move into a separate file)
  */
-
-.i-link span {
-	text-decoration: underline;
-	cursor:pointer;
+.i-link a {
+	font-size: 13px;
+	line-height: 18px;
+	color: #464f52;
 }
 
 /**
@@ -1974,6 +1974,7 @@ input.i-modified,
 	background-color: #fff;
 	border-bottom: 1px solid #dee2e3;
 	border-top: none;
+	position: relative;
 }
 
 .i-tabsheet-hidetabs .i-tabsheet-content {
