formlayout now reservers space for error indicator even though nothing is visible
svn changeset:5848 branch:trunk

--- a/WebContent/ITMILL/themes/default/formlayout/formlayout.css
+++ b/WebContent/ITMILL/themes/default/formlayout/formlayout.css
@@ -6,6 +6,16 @@
 }
 .i-formlayout-captioncell {
 	text-align:right;
+	white-space: nowrap;
+}
+
+.i-formlayout-contentcell {
+	width:100%;
+}
+
+.i-formlayout-error-indicator {
+	/* fix width so layout is not jumpy when error disapear */
+	width: 12px;
 }
 
 .i-formlayout-spacing .i-formlayout-row .i-formlayout-captioncell, 
