--- a/WebContent/ITMILL/themes/default/slider/slider.css
+++ b/WebContent/ITMILL/themes/default/slider/slider.css
@@ -5,8 +5,9 @@
 .i-slider {
 	border-top: 1px solid #cccfd0;
 	border-bottom: 1px solid #cccfd0;
-	height: 3px;
+	height: 12px;
 	margin: 5px 0;
+	width:200px;	
 }
 
 .i-slider-base {
