--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -663,6 +663,7 @@ input.i-modified,
 }
 
 .i-formlayout-error-indicator {
+	/* fix width so layout is not jumpy when error disapear */
 	width: 12px;
 }
 
@@ -1445,8 +1446,9 @@ input.i-modified,
 .i-slider {
 	border-top: 1px solid #cccfd0;
 	border-bottom: 1px solid #cccfd0;
-	height: 3px;
+	height: 12px;
 	margin: 5px 0;
+	width:200px;	
 }
 
 .i-slider-base {
