Less flicker for captions in Safari
svn changeset:5876 branch:trunk

--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -109,6 +109,11 @@
 	text-align: left /* Force default alignment */
 }
 
+.i-caption {
+	overflow: hidden;
+	white-space: nowrap;
+}
+
 .i-errorindicator {
 	width: 12px;
 	height: 16px;
