Fixed replaceChildComponent for TabSheet and Accordion (#2204) Fixed showing/hiding of tabs in TabSheet and Accordion
svn changeset:5887 branch:trunk

--- a/WebContent/ITMILL/themes/default/accordion/accordion.css
+++ b/WebContent/ITMILL/themes/default/accordion/accordion.css
@@ -1,7 +1,13 @@
 .i-accordion {
+	position: relative;
 	outline: none;
 	overflow: hidden;
 	text-align: left /* Force default alignment */
+}
+
+.i-accordion-item {
+	position: relative; 
+	background-color: #fff;
 }
 
 .i-accordion-item-caption {
@@ -33,4 +39,7 @@
 }
 
 .i-accordion-item-content {
+	position: absolute;
+	overflow: auto;
+	width: 100%;
 }
