--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -1,8 +1,14 @@
 /* Automatically compiled css file from subdirectories. */
 .i-accordion {
+	position: relative;
 	outline: none;
 	overflow: hidden;
 	text-align: left /* Force default alignment */
+}
+
+.i-accordion-item {
+	position: relative; 
+	background-color: #fff;
 }
 
 .i-accordion-item-caption {
@@ -34,6 +40,9 @@
 }
 
 .i-accordion-item-content {
+	position: absolute;
+	overflow: auto;
+	width: 100%;
 }
 .i-button {
 	cursor: pointer;
