Test case for #2208
svn changeset:5911 branch:trunk

--- a/WebContent/ITMILL/themes/tests-tickets/styles.css
+++ b/WebContent/ITMILL/themes/tests-tickets/styles.css
@@ -168,3 +168,17 @@
 	padding: 0;
 	background: lime;
 }
+
+
+/*****************************************************************************/
+/* Table Cell Generator test
+/*****************************************************************************/
+
+.i-table-cell-content-red {
+	background: red;
+}
+
+.i-table-cell-content-green {
+	background: lightgreen;
+}
+	
