added styles for gridlayout and for invalid layouts (in debug mode)
svn changeset:5962 branch:trunk

--- a/WebContent/ITMILL/themes/default/common/common.css
+++ b/WebContent/ITMILL/themes/default/common/common.css
@@ -273,3 +273,9 @@ input.i-modified,
 	font-size:xx-small;
 }
 
+/* Debug style */
+.i-app .invalidlayout,
+.i-app .invalidlayout * {
+	background: #f99 !important;
+	
+}
