Testcase and fix for #2222 - OrderedLayout spacing not working
svn changeset:5964 branch:trunk

--- a/WebContent/ITMILL/themes/default/orderedlayout/orderedlayout.css
+++ b/WebContent/ITMILL/themes/default/orderedlayout/orderedlayout.css
@@ -18,10 +18,7 @@
 	padding-left: 18px;
 }
 
-.i-orderedlayout-vspacing {
+.i-orderedlayout-spacing {
 	padding-top: 8px;
-}
-
-.i-orderedlayout-hspacing {
 	padding-left: 8px;
 }
