refined test case
svn changeset:5971 branch:trunk

--- a/WebContent/ITMILL/themes/tests-tickets/styles.css
+++ b/WebContent/ITMILL/themes/tests-tickets/styles.css
@@ -224,7 +224,7 @@
 	padding-left: 40px;
 }
 
-.i-gridlayout-ticket2222 .i-gridlayout-spacing {
+.i-gridlayout-ticket2222 .i-gridlayout-spacing-element {
 	padding-top: 50px;
 	padding-left: 60px;
 }
