cleaned gridlayout css file, implemented separate horizontal spacing and vertical spacing for gridlayout (fixes #2225), updated test case
svn changeset:5972 branch:trunk

--- a/WebContent/ITMILL/themes/default/gridlayout/gridlayout.css
+++ b/WebContent/ITMILL/themes/default/gridlayout/gridlayout.css
@@ -1,6 +1,4 @@
-.i-gridlayout {
-	overflow:hidden;
-}
+/* Margin values if defined from server side */
 .i-gridlayout-margin-top {
 	padding-top: 15px;
 }
@@ -14,31 +12,17 @@
 	padding-right: 18px;
 }
 
-.i-gridlayout-grid {
-	margin:0;
-	padding:0;
-	border-collapse: collapse;
-	border:0;
-}
-
-.i-gridlayout-cell {
-	margin:0;
-	padding:0;
-}
-
-/* spacing value used by css detector */
+/* 
+ * Spacing values used by IGridLayout. (element does not exist in DOM)
+ * Use padding-left for horizontal spacing and padding-top for vertical.
+ */
 .i-gridlayout-spacing-element {
+	padding-left:8px;
 	padding-left:8px;
 }
 
-.i-gridlayout-spacing .i-gridlayout-cell {
-	padding-left: 8px;
-	padding-top: 8px;
+
+.i-gridlayout {
+	overflow:hidden;
 }
 
-.i-gridlayout-spacing .i-gridlayout-firstcol {
-	padding-left: 0;
-}
-.i-gridlayout-spacing .i-gridlayout-firstrow {
-	padding-top: 0;
-}
