--- a/WebContent/ITMILL/themes/tests-tickets/styles.css
+++ b/WebContent/ITMILL/themes/tests-tickets/styles.css
@@ -224,8 +224,8 @@
 	padding-left: 40px;
 }
 
-.i-gridlayout-ticket2222 .i-gridlayout-spacing-element {
+.i-gridlayout-ticket2222 .i-gridlayout-spacing {
 	padding-top: 50px;
-	padding-left: 60px;
+	padding-left: 20px;
 }
 
