--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -739,9 +739,7 @@ input.i-modified,
 .i-form .i-caption .i-required-field-indicator {
 	float: none;
 }
-.i-gridlayout {
-	overflow:hidden;
-}
+/* Margin values if defined from server side */
 .i-gridlayout-margin-top {
 	padding-top: 15px;
 }
@@ -755,34 +753,20 @@ input.i-modified,
 	padding-right: 18px;
 }
 
-.i-gridlayout-grid {
-	margin:0;
-	padding:0;
-	border-collapse: collapse;
-	border:0;
-}
-
-.i-gridlayout-cell {
-	margin:0;
-	padding:0;
-}
-
-/* spacing value used by css detector */
+/* 
+ * Spacing values used by IGridLayout. (element does not exist in DOM)
+ * Use padding-left for horizontal spacing and padding-top for vertical.
+ */
 .i-gridlayout-spacing-element {
+	padding-left:8px;
 	padding-left:8px;
 }
 
-.i-gridlayout-spacing .i-gridlayout-cell {
-	padding-left: 8px;
-	padding-top: 8px;
+
+.i-gridlayout {
+	overflow:hidden;
 }
 
-.i-gridlayout-spacing .i-gridlayout-firstcol {
-	padding-left: 0;
-}
-.i-gridlayout-spacing .i-gridlayout-firstrow {
-	padding-top: 0;
-}
 /*
  *MenuBar styles
  */
@@ -1236,8 +1220,13 @@ input.i-modified,
 	font-size: 13px;
 }
 .i-filterselect-input:focus {
-	/* button clips safari outline otherwise (#1684) */
-	outline-offset: -1px; 
+	/* remove safari/mac outline from this element */
+	outline: 0px;
+}
+.i-filterselect-focus {
+	/* place safari focus outline around the whole thing */
+	outline: 5px auto -webkit-focus-ring-color;
+	outline-offset: -4px;
 }
 
 .i-filterselect-button {
