--- a/WebContent/ITMILL/themes/default/button/button.css
+++ b/WebContent/ITMILL/themes/default/button/button.css
@@ -4,7 +4,6 @@
 	white-space: nowrap;
 	margin: 0px;
 }
-
 .i-button img {
 	display:inline;
 }
@@ -15,6 +14,9 @@
 	text-decoration: underline;
 	background: none;
 	padding: 0;
+}
+.i-sa .i-button-link:focus {
+	outline-offset: -3px;
 }
 .i-button-link span {
 	text-decoration: underline;
