--- a/WebContent/ITMILL/themes/default/select/select.css
+++ b/WebContent/ITMILL/themes/default/select/select.css
@@ -88,6 +88,10 @@
 	outline: 0px;
 }
 .i-filterselect-focus {
+	outline: 1px solid #5daee8;
+	outline-offset: -1px;
+}
+.i-sa .i-filterselect-focus {
 	/* place safari focus outline around the whole thing */
 	outline: 5px auto -webkit-focus-ring-color;
 	outline-offset: -4px;
