Fix for #2231 - Allow border and padding for Labels
svn changeset:6023 branch:trunk

--- a/WebContent/ITMILL/themes/tests-tickets/styles.css
+++ b/WebContent/ITMILL/themes/tests-tickets/styles.css
@@ -229,6 +229,14 @@
 	padding-left: 20px;
 }
 
+.ticket2231 {
+	margin: 50px;
+}
+
+.ticket2231-border {
+	border: 2em solid red;
+}
+
 /*****************************************************************************/
 /* Ticket 2232                                                               */
 /*****************************************************************************/
