--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -935,9 +935,14 @@ input.i-modified,
 	padding-left: 18px;
 }
 
-.i-orderedlayout-spacing {
+.i-orderedlayout-spacing-on {
 	padding-top: 8px;
 	padding-left: 8px;
+}
+/** This can be used to define spacing if spacing is off server side */
+.i-orderedlayout-spacing-off {
+	padding-top: 0px;
+	padding-left: 0px;
 }
 .i-panel,
 .i-panel-caption,
@@ -2037,8 +2042,8 @@ input.i-modified,
 
 .i-tabsheet-loading .i-tabsheet-tabs .i-tabsheet-tabitem-selected .i-caption .i-captiontext {
 	background: transparent url(common/img/ajax-loader.gif) no-repeat;
-	margin-left: -10px;
-	padding-left: 10px;
+	margin-left: -7px;
+	padding-left: 7px;
 	margin-top: -12px;
 	padding-top: 12px;
 }
