Table w/o header was missing border-top. Fixed.
svn changeset:6031 branch:trunk

--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -1675,6 +1675,7 @@ input.i-modified,
 	height: 36px;
 	background: #e7edf3 url(table/img/header-bg.png) repeat-x;
 	border: 1px solid #b6bbbc;
+	border-bottom: none;
 	overflow: hidden;
 }
 
@@ -1735,7 +1736,6 @@ input.i-modified,
 .i-table-body {
 	background: #fff;
 	border: 1px solid #b6bbbc;
-	border-top: none;
 }
 
 .i-table-row-spacer {
