--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -2010,6 +2010,7 @@ input.i-modified,
 	margin: 0 -1px 0 9px;
 	height: 18px;
 	padding: 16px 16px 14px 7px;
+	overflow: visible;
 }
 
 .i-tabsheet-content {
@@ -2043,10 +2044,10 @@ input.i-modified,
 
 /* Progress indication */
 
-.i-tabsheet-loading .i-tabsheet-tabs .i-tabsheet-tabitem-selected .i-caption .i-captiontext {
+.i-tabsheet-loading .i-tabsheet-tabitem-selected .i-captiontext {
 	background: transparent url(common/img/ajax-loader.gif) no-repeat;
-	margin-left: -7px;
-	padding-left: 7px;
+	margin-left: -10px;
+	padding-left: 10px;
 	margin-top: -12px;
 	padding-top: 12px;
 }
@@ -2061,7 +2062,7 @@ input.i-modified,
 	height: 46px;
 }
 
-* html .i-tabsheet-tabs .i-tabsheet-tabitem-selected {
+* html .i-tabsheet-tabitem-selected {
 	border: 1px solid #babfc0;
 	border-bottom: none;
 	background: #fff;
@@ -2071,7 +2072,7 @@ input.i-modified,
 	cursor: default;
 	color: #ee5311;
 }
-*+html .i-tabsheet-tabs .i-tabsheet-tabitem-selected {
+*+html .i-tabsheet-tabitem-selected {
 	border: 1px solid #babfc0;
 	border-bottom: none;
 	background: #fff;
@@ -2082,12 +2083,12 @@ input.i-modified,
 	color: #ee5311;
 }
 
-* html .i-tabsheet-tabs .i-tabsheet-tabitem-selected .i-caption {
+* html .i-tabsheet-tabitem-selected .i-caption {
 	background: transparent;
 	padding: 0;
 	margin: 0;
 }
-*+html .i-tabsheet-tabs .i-tabsheet-tabitem-selected .i-caption {
+*+html .i-tabsheet-tabitem-selected .i-caption {
 	background: transparent;
 	padding: 0;
 	margin: 0;
